fix makefile template, lint issues

--- a/Makefile.tmpl
+++ b/Makefile.tmpl
@@ -44,7 +44,7 @@ shellcheck-fix: $(SHELLCHECK_BIN)
 {{ end -}}
 
 {{ if .Dockerfile -}}
-HADOLINT_VERSION ?= v2.12.0
+HADOLINT_VERSION ?= v2.12.1-beta
 HADOLINT_BIN := $(LINT_ROOT)/out/linters/hadolint-$(HADOLINT_VERSION)-$(LINT_ARCH)
 $(HADOLINT_BIN):
 	mkdir -p $(LINT_ROOT)/out/linters
@@ -61,7 +61,7 @@ hadolint-lint: $(HADOLINT_BIN)
 
 {{ if .Go -}}
 GOLANGCI_LINT_CONFIG := $(LINT_ROOT)/.golangci.yml
-GOLANGCI_LINT_VERSION ?= v2.3.0
+GOLANGCI_LINT_VERSION ?= v2.3.1
 GOLANGCI_LINT_BIN := $(LINT_ROOT)/out/linters/golangci-lint-$(GOLANGCI_LINT_VERSION)-$(LINT_ARCH)
 $(GOLANGCI_LINT_BIN):
 	mkdir -p $(LINT_ROOT)/out/linters
